# backend

./: .env  .gitignore  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt  vercel.json
app/database/: database-sample.py
app/model/: login.py
migration/: env.py
migration/versions/: 2024_11_05_1516-c4ae79596fa9_.py  2025_01_14_1535-beaf7fe6a34d_.py  2025_01_14_1549-55ccd1aaddaf_.py  2025_01_15_2019-fb84f25a14f3_.py  2025_01_16_1345-154dee322e1e_.py  2025_01_20_2107-3c04efd64c44_.py  95b0d878b295_initial_migration.py
src/backend/: alembic.ini  main.py
src/backend/app/database/: database.py
src/backend/app/model/: table.py
src/backend/migrattion/: env.py
src/backend/migrattion/versions/: 802dda719ac3_.py  c593396f5eda_.py
src/fastapi_deploy_sample/: __init__.py
