[project]
name = "fastapi-deploy-sample"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "tanaanat", email = "takumadagu@gmail.com" }
]
dependencies = [
    "fastapi[standard]>=0.115.4",
    "psycopg[binary]>=3.2.3",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pgcli>=4.1.0",
    "alembic>=1.14.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_deploy_sample"]
