[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "tanaanat", email = "takumadagu@gmail.com" }
]
dependencies = [
    "fastapi[standard]>=0.115.6",
    "uvicorn>=0.32.1",
    "pgcli>=4.1.0",
    "sqlalchemy>=2.0.36",
    "psycopg[binary]>=3.2.3",
    "ulid>=1.1",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pgcli>=4.1.0",
    "alembic>=1.14.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
